<resources>
    <string name="app_name">赫萝影音</string>

    <!--MagicSakura-->
    <string name="cancel">cancel</string>
    <string name="confirm">ok</string>

    <!--主页-->
    <string name="test_username">赵日天</string>
    <string name="test_level">Lv9</string>
    <string name="members">正式会员</string>

    <string name="section_recommend">推荐</string>
    <string name="section_live">直播</string>
    <string name="section_focus">关注</string>
    <string name="section_more">分区</string>
    <string name="section_bangumi">番剧</string>
    <string name="section_discover">发现</string>

    <!--主题选择-->
    <string name="theme_pick">主题选择</string>

    <!-- Navigation Items -->
    <string name="item_home">主页</string>
    <string name="item_downloaded">离线缓存</string>
    <string name="item_favourite">我的收藏</string>
    <string name="item_history">历史记录</string>
    <string name="item_settings">设置与帮助</string>
    <string name="item_theme">主题选择</string>

    <!--MediaPlayer-->
    <string name="video_init">初始化播放器…</string>
    <string name="video_loading">加载中…</string>
    <string name="play_immediately">立即播放</string>
    <string name="giraffe_player_url_empty">Please specify the address of the video playback</string>
    <string name="small_problem">Player encountered a small problem</string>
    <string name="can_not_play">can not play this video</string>
    <string name="not_support">player not support this device</string>

    <!--App 介绍-->
    <string name="about_user_head_layout">硬币: 47</string>
    <string name="about_introduce">「哔哩哔哩」</string>
    <string name="about_menu_action_share">分享</string>
    <string name="about_developers">关于我</string>
    <string name="about">关于哔哩哔哩</string>
    <string name="about_version">V1.0</string>

    <!--详情页-->
    <string name="coin">投硬币</string>
    <string name="collection">收藏</string>
    <string name="cache">缓存</string>
    <string name="add_follow">+关注</string>

    <!--推荐-->
    <string name="rank">排行榜</string>
    <string name="home_tab_more">更多</string>
    <string name="look_more">查看更多</string>
    <string name="change_recommend">换一波推荐</string>
    <string name="selection">选集</string>

    <!--番剧-->
    <string name="to_them">追番</string>
    <string name="time_line">放送表</string>
    <string name="index">索引</string>
    <string name="new_bangumi_serial">新番连载</string>
    <string name="more_new_bangumi_serial">所有连载</string>
    <string name="bangumi_recommend">番剧推荐</string>
    <string name="season_list">分季列表</string>
    <string name="bangumi_follow">追番</string>
    <string name="introduction">简介</string>
    <string name="more">更多</string>
    <string name="more_hot_comment">更多热门评论 >></string>
</resources>
